<resources>
    <string name="app_name">רגעי חולין</string>
    <string name="logo">רגעי ; חולין</string>
    <string name="demo_button">RESTART\nDEMO</string>

    <!--    onboarding screens-->
    <string name="onboarding1_title">האני החווה מול האני הזוכר</string>
    <string name="onboarding1_text1">"נפריד בין שני מצבי התודעה שלנו:\nה״אני החווה״ וה״אני הזוכר״."</string>
    <string name="onboarding1_text2">חייו של “האני החווה” מורכבים ממיליוני רגעים שחולפים בזה אחר זה. הוא מכיר רק את הרגע הנוכחי, ההווה הפסיכולוגי, שנמשך כ-3 שניות.</string>
    <string name="onboarding1_text3">״האני הזוכר״ אוסף רגעים לסיפורים ומתייק אותם כזכרונות. סיפורים כאלה הם בדרך כלל בעלי מאפיינים עלילתיים: שינוי, משמעות וסיום.</string>
    <string name="onboarding2_title">לזכור הוויה, ולא רק סיפור</string>
    <string name="onboarding2_text">מי אנחנו ברגעים הסתמיים שבין רגעי השיא?\n\nמה בכל זאת קורה לנו בהם, שהרי הם רוב חיינו?\n\nמה נוכל ללמוד על עצמנו אם נתבונן ברגעים האלה, אם נתעד אותם בדיוק כפי שהם?</string>
    <string name="onboarding3_title">איך זה עובד?</string>
    <string name="onboarding3_text1">מקבלים נוטיפיקציה ברגע אקראי.</string>
    <string name="onboarding3_text2">כותבים את ההווה: מה אני רואה?\nעל מה אני חושבת? מה אני מרגיש?</string>
    <string name="onboarding3_text3">מצרפים תמונה מהרגע.</string>
    <string name="onboarding3_text4">ממשיכים לאסוף רגעים במשך זמן אקראי\nשנבחר עבורך, בין 15 ל-30 יום.</string>
    <string name="onboarding3_text5">מקבלים יומן מודפס במשלוח עד הבית.</string>
    <string name="onboarding3_button">נתחיל</string>
    <string name="onboarding_bullet1">א.</string>
    <string name="onboarding_bullet2">ב.</string>
    <string name="onboarding_bullet3">ג.</string>
    <string name="onboarding_bullet4">ד.</string>
    <string name="onboarding_bullet5">ה.</string>


    <!--    start dialog-->
    <string name="dialog_text1">הרגע הראשון שיתועד יהיה הרגע הנוכחי, בתור דוגמה.</string>
    <string name="dialog_text2">הרגעים הבאים יוגדרו עבורך באופן אקראי, ותשלח לך על כך נוטיפיקציה.</string>
    <string name="start_dialog_button">התחל</string>

    <!--    snooze dialog-->
    <string name="snooze_dialog_text">האם לדחות את הכתיבה?\nהרגע הנוכחי לא ישמר, ויבחר עבורך רגע אקראי אחר במקומו.</string>
    <string name="snooze_dialog_pos_button">דחה</string>
    <string name="snooze_dialog_neg_button">חזור</string>

    <!--    send to email dialog-->
    <string name="send_to_email_dialog_text">הרגע שתיעדת ישלח בזמן אקראי בעתיד הקרוב לכתובת המייל:</string>
    <string name="send_to_email_dialog_pos_button">שליחה</string>
    <string name="send_to_email_dialog_neg_button">יציאה</string>


    <!--    move to camera dialog-->
    <string name="move_to_camera_dialog_text">לחיצה על המשך תשמור את הטקסט ותוביל למצלמה, להוספת תמונה מהרגע.</string>
    <string name="move_to_camera_dialog_pos_button">המשך</string>
    <string name="move_to_camera_dialog_neg_button">ערוך</string>
    <string name="dont_show_again">אל תציג שנית</string>

    <!--    logout dialog-->
    <string name="logout_dialog_text">האם ברצונך להפסיק את כתיבת היומן?\nהרגעים שאספת עד כה ישלחו לכתובת שהזנת בהגדרות.</string>
    <string name="logout_dialog_pos_button">התנתק</string>
    <string name="logout_dialog_neg_button">חזור</string>

    <!--    writing frag-->
    <string name="continue_button">המשך</string>
    <string name="character_counter">%1$d/%2$d</string>

    <!--    home frag-->
    <string name="start_diary">התחל יומן</string>
    <string name="home_fragment_no_diary">כרגע אין יומן פעיל שצובר רגעים.</string>
    <string name="home_fragment_no_moment">כרגע אין רגע כתיבה פעיל.\nרגעי הכתיבה יבחרו עבורך אקראית,\nותשלח על כך נוטיפיקציה.</string>

    <!-- finish frag -->
    <string name="finish_text_1">הרגע שלך נשמר</string>
    <string name="finish_text_2">יהיה ניתן לצפות בו בתום התקופה,\nכשהיומן יגיע לידיך.\nלהתראות ברגע הבא.</string>
    <string name="finish_button">סיום</string>

    <!--    menu frag-->
    <string name="logout">התנתק</string>
    <string name="address">עמית אילן\nישעיהו 15 דירה 14\nתל אביב</string>
    <string name="title1">פרטי משלוח</string>
    <string name="title2">לשון פניה</string>
    <string name="male">גבר</string>
    <string name="female">אישה</string>


    <string name="error">error!!!!</string>
    <string name="content_description">description</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">כתובת מייל</string>

</resources>