<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".ui.main.HomeFragment"
    android:background="#FFFFFF">

    <VideoView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/first_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/home_screen_first_frame"
        android:contentDescription="@string/content_description" />


    <Button
        android:id="@+id/start_button"
        style="@style/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="0dp"
        android:text="@string/start_diary" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:textAlignment="center"
            style="@style/app_text"
            android:text="@string/home_fragment_no_diary" />

        <Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bottom_margin" />
    </LinearLayout>
</FrameLayout>