<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:backgroundDimAmount="0.7"
    android:backgroundDimEnabled="true"
    android:paddingTop="@dimen/dialog_top_padding"
    android:paddingBottom="@dimen/dialog_bottom_padding">

    <TextView
        android:id="@+id/text"
        style="@style/app_text"
        android:layout_width="@dimen/snooze_dialog_text_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_horizontal_margin"
        android:gravity="center"
        android:paddingBottom="@dimen/dialog_vertical_space"
        android:text="@string/move_to_camera_dialog_text"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonsBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/dont_show_again_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <Button
            android:id="@+id/accept_move_to_camera_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_vertical_space"
            android:text="@string/move_to_camera_dialog_pos_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dot_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:src="@drawable/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/accept_move_to_camera_button"
            app:layout_constraintStart_toEndOf="@id/back_move_to_camera_button"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/content_description" />

        <Button
            android:id="@+id/back_move_to_camera_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_vertical_space"
            android:text="@string/move_to_camera_dialog_neg_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dont_show_again_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/buttonsBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/checkbox"
            android:button="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/dont_show_again"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
