<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:backgroundDimEnabled ="true"
    android:backgroundDimAmount="0.7"
    android:paddingTop="@dimen/dialog_top_padding"
    android:paddingBottom="@dimen/dialog_bottom_padding">

    <TextView
        android:id="@+id/text_1"
        style="@style/onboarding_text"
        android:layout_width="@dimen/start_dialog_text_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dialog_horizontal_margin"
        android:paddingBottom="@dimen/dialog_vertical_space"
        android:text="@string/dialog_text1"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/dot_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dialog_vertical_space"
        android:src="@drawable/dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1" />

    <TextView
        android:id="@+id/text_2"
        style="@style/onboarding_text"
        android:layout_width="@dimen/start_dialog_text_width"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/dialog_horizontal_margin"
        android:paddingBottom="@dimen/dialog_vertical_space"
        android:text="@string/dialog_text2"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dot_1" />

    <Button
        android:id="@+id/dialog_button"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_dialog_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_2"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
