<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:backgroundDimAmount="0.7"
    android:backgroundDimEnabled="true"
    android:paddingTop="16dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/text"
        style="@style/onboarding_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dialog_horizontal_margin"
        android:gravity="center"
        android:paddingBottom="@dimen/dialog_vertical_padding"
        android:text="@string/snooze_dialog_text"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text">

        <Button
            android:id="@+id/accept_snooze_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_vertical_padding"
            android:text="@string/snooze_dialog_pos_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dot_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:src="@drawable/dot"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/accept_snooze_button"
            app:layout_constraintStart_toEndOf="@id/back_snooze_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back_snooze_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_vertical_padding"
            android:text="@string/snooze_dialog_neg_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
